--- a/.gitattributes
+++ b/.gitattributes
@@ -13,3 +13,4 @@ obj filter=lfs diff=lfs merge=lfs -text
 Assembly-CSharp.csproj filter=lfs diff=lfs merge=lfs -text
 Packages filter=lfs diff=lfs merge=lfs -text
 ProjectSettings filter=lfs diff=lfs merge=lfs -text
+Temp filter=lfs diff=lfs merge=lfs -text
